--- a/src/css_part/background.html
+++ b/src/css_part/background.html
@@ -134,6 +134,7 @@
             </dd>
           </dl>
         </li>
+
         <li>
           <dl>
             <dt>배경 이미지 위치 조절 background-position: &lt;수평위치&gt; &lt;수직위치&gt;</dt>
@@ -176,6 +177,7 @@
             </dd>
           </dl>
         </li>
+
         <li>
           <h4>불릿 대신 이미지</h4>
           <blockquote>
@@ -187,6 +189,7 @@
             </ul>
           </blockquote>
         </li>
+
         <li>
           <h4>배경 이미지의 적용 범위 조절 background-origin</h4>
           <blockquote>
@@ -214,6 +217,7 @@
             </table>
           </blockquote>
         </li>
+
         <li>
           <h4>배경 이미지 고정 background-attachment</h4>
           <blockquote>
@@ -257,6 +261,7 @@
             <p>background: url('...') no-repeat center bottom fixed;</p>
           </blockquote>
         </li>
+
         <li>
           <h4>배경 이미지 크기 조절 background-size</h4>
           <blockquote>
@@ -328,6 +333,44 @@
                 <blockquote>
                   <a href="./bacground-example.html">문서 전체에 배경 넣기</a>
                 </blockquote>
+              </li>
+            </ul>
+          </blockquote>
+        </li>
+
+        <li>
+          <h4>그러데이션</h4>
+          <blockquote>
+            <ul>
+              <li>
+                <p style="display: inline;">선형 그러데이션 linear-gradient(to 방향 또는 속도, 색상 중지점, 색상 중지점...)</p>
+                <blockquote>
+                  <div style="display: inline-block;">
+                    <div>방향</div>
+                    <div style="background: red; background: linear-gradient(to bottom, white, yellow); width: 10rem; height: 10rem; border: 0.1rem solid #000;">background: linear-gradient(to bottom, white, yellow);</div>
+                  </div>
+                  <div style="display: inline-block;">
+                    <div>각도</div>
+                    <div style="background: red; background: linear-gradient(45deg, white, yellow); width: 10rem; height: 10rem; border: 0.1rem solid #000;">background: linear-gradient(45deg, white, yellow);</div>
+                  </div>
+                </blockquote>
+              </li>
+              <li>
+                <p>색상 중지점(색상이 바뀌는 지점)</p>
+                <blockquote>
+                  <div style="background: red; background: linear-gradient(to bottom, #06f, #fff 30%, #06f); width: 10rem; height: 10rem;">linear-gradient(to bottom, #06f, #fff 30%, #06f);</div>
+                </blockquote>
+              </li>
+              <li>
+                <p>원형 그러데이션 radial-gradient(모양 크기 at 위치, 색상 중지점, 색상 중지점...)</p>
+                <div>
+                  <div>모양 미지정시 타원형(ellipse)</div>
+                  <div style="background: red; background: radial-gradient(white, yellow, red); width: 15rem; height: 10rem;">background: red; background: radial-gradient(white, yellow, red);</div>
+                </div>
+                <div>
+                  <div>모양 지정 circle</div>
+                  <div style="background: red; background: radial-gradient(circle, white, yellow, red); width: 15rem; height: 10rem;">background: red; background: radial-gradient(circle, white, yellow, red);</div>
+                </div>
               </li>
             </ul>
           </blockquote>
