--- a/public/index.html
+++ b/public/index.html
@@ -37,13 +37,14 @@
                 <li><a href="../src/css_part/box-model.html">박스 모델</a></li>
                 <li><a href="../src/css_part/layout.html">레이아웃</a></li>
                 <li><a href="../src/css_part/background.html">배경</a></li>
+                <li><a href="../src/css_part/transition&animation.html">트랜지션, 애니메이션</a></li>
               </ul>
             </li>
 
             <li class="top-level-entry-container">
               <button id="js-btn">JS</button>
               <ul class="menu">
-                <li><a href="../src/">기본</a></li>
+                <li><a href="../src/js_part/event.html">이벤트</a></li>
               </ul>
             </li>
           </ul>
