--- a/src/css_part/transition&animation.html
+++ b/src/css_part/transition&animation.html
@@ -83,7 +83,7 @@
                 <h1 style="text-align: center;">목록</h1>
                 <ul class="prod-list">
                   <li>
-                    <img src="../../img/jordan.jpg" alt="4">
+                    <img class="product" src="../../img/jordan.jpg" alt="4">
                     <div class="caption">
                       <h2>상품 1</h2>
                       <p>jodan retro 4</p>
