--- a/src/css_part/transition&animation.html
+++ b/src/css_part/transition&animation.html
@@ -115,6 +115,11 @@
           </li>
         </ul>
       </section>
+
+      <section class="section section__animation">
+        <h2 class="summary">애니메이션</h2>
+        
+      </section>
     </div>
 </body>
 </html>
