--- a/src/js_part/event.html
+++ b/src/js_part/event.html
@@ -10,7 +10,55 @@
 <body>
     <a href="../../public/index.html">HOME</a>
     <div class="body__container">
-        <h1 class="summary">이벤트</h1>
+        <section class="section section__event">
+            <h1 class="summary">이벤트</h1>
+            <h3><img src="../../img/bullet-image.png" alt="블릿"> 이벤트 : 웹 브라우저나 사용자가 행하는 어떤 동작(웹 문서 안에서 이루어지는)</h3>
+            <ul>
+                <li>
+                    <h4>마우스 이벤트</h4>
+                    <ul>
+                        <li>click</li>
+                        <li>dbclick</li>
+                        <li>mousedown</li>
+                        <li>mousemove</li>
+                        <li>mouseover</li>
+                        <li>mouseout</li>
+                        <li>mouseup</li>
+                    </ul>
+                </li>
+                <li>
+                    <h4>키보드 이벤트</h4>
+                    <ul>
+                        <li>keydown</li>
+                        <li>keypress</li>
+                        <li>keyup</li>
+                    </ul>
+                </li>
+                <li>
+                    <h4>문서 로딩 이벤트</h4>
+                    <ul>
+                        <li>abort</li>
+                        <li>error</li>
+                        <li>load</li>
+                        <li>resize</li>
+                        <li>scroll</li>
+                        <li>unload</li>
+                    </ul>
+                </li>
+                <li>
+                    <h4>폼 이벤트</h4>
+                    <ul>
+                        <li>blur</li>
+                        <li>change</li>
+                        <li>focus</li>
+                        <li>reset</li>
+                        <li>submit</li>
+                    </ul>
+                </li>
+            </ul>
+            
+            <h3><img src="../../img/bullet-image.png" alt="블릿"> 이벤트 처리기(이벤트 핸들러) : 이벤트가 발생하면 처리하는 함수</h3>
+        </section>
     </div>
 </body>
 </html>
