--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
                 <li><a href="../src/css_part/layout.html">레이아웃</a></li>
                 <li><a href="../src/css_part/background.html">배경</a></li>
                 <li><a href="../src/css_part/transition&animation.html">트랜지션, 애니메이션</a></li>
+                <li><a href="../src/css_part/flex-box&grid.html">플렉스 박스, 그리드</a></li>
               </ul>
             </li>
 
