--- a/src/css_part/flex-box&grid.html
+++ b/src/css_part/flex-box&grid.html
@@ -270,6 +270,19 @@
         </li>
       </ul>
     </section>
+    
+    <section class="section section__grid">
+      <h2 class="summary">그리드 레이아웃</h2>
+      <ul>
+        <li>
+          <h4>그리드 컨테이너 지정 display</h4>
+          <blockquote>
+            <p>grid</p>
+            <p>inline-grid</p>
+          </blockquote>
+        </li>
+      </ul>
+    </section>
   </div>
 </body>
 </html>
